Cleaned the column 'function'

--- a/cleaning_dataset.ipynb
+++ b/cleaning_dataset.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Extracting salary range\n",
+    "# Extracting `salary_range`\n",
     "\n",
     "The cleaned salary range are stored in column `salary_lower_limit` and `salary_upper_limit`\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -469,13 +469,127 @@
        "49              0                   0                   0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "jobPostings[[\"salary_range\", \"salary_lower_limit\", \"salary_upper_limit\"]].head(50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Cleaning `function` using one-hot encoding\n",
+    "\n",
+    "Columns can be accessed by using `function_type_is_<function name>`.\n",
+    "\n",
+    "For example, if you want to know whether the job has the function of 'Marketing', simply use `jobPostings[\"function_type_is_Marketing\"]` to generate a column of bool."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobPostings[\"function\"] = jobPostings[\"function\"].fillna('Not specified')\n",
+    "jobPostings[\"function\"] = jobPostings[\"function\"].astype(\"category\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = jobPostings[\"function\"]\n",
+    "\n",
+    "# generate binary values using get_dummies\n",
+    "jobPostings = pd.get_dummies(jobPostings, columns=[\"function\"], prefix=[\"function_type_is\"], dtype=\"bool\")\n",
+    "jobPostings = jobPostings.join(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_id                                        int64\n",
+       "title                                        object\n",
+       "location                                     object\n",
+       "department                                   object\n",
+       "salary_range                                 object\n",
+       "company_profile                              object\n",
+       "description                                  object\n",
+       "requirements                                 object\n",
+       "benefits                                     object\n",
+       "telecommuting                                 int64\n",
+       "has_company_logo                              int64\n",
+       "has_questions                                 int64\n",
+       "employment_type                              object\n",
+       "required_experience                          object\n",
+       "required_education                           object\n",
+       "industry                                     object\n",
+       "fraudulent                                    int64\n",
+       "salary_lower_limit                            int64\n",
+       "salary_upper_limit                            int64\n",
+       "function_type_is_Accounting/Auditing           bool\n",
+       "function_type_is_Administrative                bool\n",
+       "function_type_is_Advertising                   bool\n",
+       "function_type_is_Art/Creative                  bool\n",
+       "function_type_is_Business Analyst              bool\n",
+       "function_type_is_Business Development          bool\n",
+       "function_type_is_Consulting                    bool\n",
+       "function_type_is_Customer Service              bool\n",
+       "function_type_is_Data Analyst                  bool\n",
+       "function_type_is_Design                        bool\n",
+       "function_type_is_Distribution                  bool\n",
+       "function_type_is_Education                     bool\n",
+       "function_type_is_Engineering                   bool\n",
+       "function_type_is_Finance                       bool\n",
+       "function_type_is_Financial Analyst             bool\n",
+       "function_type_is_General Business              bool\n",
+       "function_type_is_Health Care Provider          bool\n",
+       "function_type_is_Human Resources               bool\n",
+       "function_type_is_Information Technology        bool\n",
+       "function_type_is_Legal                         bool\n",
+       "function_type_is_Management                    bool\n",
+       "function_type_is_Manufacturing                 bool\n",
+       "function_type_is_Marketing                     bool\n",
+       "function_type_is_Not specified                 bool\n",
+       "function_type_is_Other                         bool\n",
+       "function_type_is_Product Management            bool\n",
+       "function_type_is_Production                    bool\n",
+       "function_type_is_Project Management            bool\n",
+       "function_type_is_Public Relations              bool\n",
+       "function_type_is_Purchasing                    bool\n",
+       "function_type_is_Quality Assurance             bool\n",
+       "function_type_is_Research                      bool\n",
+       "function_type_is_Sales                         bool\n",
+       "function_type_is_Science                       bool\n",
+       "function_type_is_Strategy/Planning             bool\n",
+       "function_type_is_Supply Chain                  bool\n",
+       "function_type_is_Training                      bool\n",
+       "function_type_is_Writing/Editing               bool\n",
+       "function                                   category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobPostings.dtypes"
    ]
   }
  ],
