Extracted country codes

--- a/cleaning_dataset.ipynb
+++ b/cleaning_dataset.ipynb
@@ -591,6 +591,129 @@
    "source": [
     "jobPostings.dtypes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Extract country codes from `location` to column `country_code`\n",
+    "\n",
+    "'NS' refers to not being specified, rather than a actual country code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobPostings[\"location\"] = jobPostings[\"location\"].fillna(\"NS\") # Not specified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_country_code(t):\n",
+    "    return t[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = []\n",
+    "for i in range(len(jobPostings)):\n",
+    "    code.append(extract_country_code(jobPostings[\"location\"][i]))\n",
+    "\n",
+    "jobPostings[\"country_code\"] = code\n",
+    "jobPostings[\"country_code\"] = jobPostings[\"country_code\"].astype(\"category\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_id                                        int64\n",
+       "title                                        object\n",
+       "location                                     object\n",
+       "department                                   object\n",
+       "salary_range                                 object\n",
+       "company_profile                              object\n",
+       "description                                  object\n",
+       "requirements                                 object\n",
+       "benefits                                     object\n",
+       "telecommuting                                 int64\n",
+       "has_company_logo                              int64\n",
+       "has_questions                                 int64\n",
+       "employment_type                              object\n",
+       "required_experience                          object\n",
+       "required_education                           object\n",
+       "industry                                     object\n",
+       "fraudulent                                    int64\n",
+       "salary_lower_limit                            int64\n",
+       "salary_upper_limit                            int64\n",
+       "function_type_is_Accounting/Auditing           bool\n",
+       "function_type_is_Administrative                bool\n",
+       "function_type_is_Advertising                   bool\n",
+       "function_type_is_Art/Creative                  bool\n",
+       "function_type_is_Business Analyst              bool\n",
+       "function_type_is_Business Development          bool\n",
+       "function_type_is_Consulting                    bool\n",
+       "function_type_is_Customer Service              bool\n",
+       "function_type_is_Data Analyst                  bool\n",
+       "function_type_is_Design                        bool\n",
+       "function_type_is_Distribution                  bool\n",
+       "function_type_is_Education                     bool\n",
+       "function_type_is_Engineering                   bool\n",
+       "function_type_is_Finance                       bool\n",
+       "function_type_is_Financial Analyst             bool\n",
+       "function_type_is_General Business              bool\n",
+       "function_type_is_Health Care Provider          bool\n",
+       "function_type_is_Human Resources               bool\n",
+       "function_type_is_Information Technology        bool\n",
+       "function_type_is_Legal                         bool\n",
+       "function_type_is_Management                    bool\n",
+       "function_type_is_Manufacturing                 bool\n",
+       "function_type_is_Marketing                     bool\n",
+       "function_type_is_Not specified                 bool\n",
+       "function_type_is_Other                         bool\n",
+       "function_type_is_Product Management            bool\n",
+       "function_type_is_Production                    bool\n",
+       "function_type_is_Project Management            bool\n",
+       "function_type_is_Public Relations              bool\n",
+       "function_type_is_Purchasing                    bool\n",
+       "function_type_is_Quality Assurance             bool\n",
+       "function_type_is_Research                      bool\n",
+       "function_type_is_Sales                         bool\n",
+       "function_type_is_Science                       bool\n",
+       "function_type_is_Strategy/Planning             bool\n",
+       "function_type_is_Supply Chain                  bool\n",
+       "function_type_is_Training                      bool\n",
+       "function_type_is_Writing/Editing               bool\n",
+       "function                                   category\n",
+       "country_code                               category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobPostings.dtypes"
+   ]
   }
  ],
  "metadata": {
