Tried differen classification models

--- a/cleaning_dataset.ipynb
+++ b/cleaning_dataset.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +27,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobData = pd.read_csv('fake_job_postings.csv')"
+    "jobData = pd.read_csv('Datasets/fake_job_postings.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Cast `fraudulent` to `bool` type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobData['fraudulent'] = jobData['fraudulent'].astype('bool')"
    ]
   },
   {
@@ -698,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobData.to_csv('cleaned_data.csv', index=False) "
+    "jobData.to_csv('Datasets/cleaned_data.csv', index=False) "
    ]
   },
   {
