--- a/2. Exploratory Analysis.ipynb
+++ b/2. Exploratory Analysis.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "# Exploratory Analysis\n",
     "\n",
+    "---\n",
+    "EE0005 Mini-project EE10\n",
+    "\n",
+    "Group **Veriton**\n",
+    "\n",
+    "Members: Hoi To, Joel Lee, Monicka, Yashwanth\n",
+    "\n",
     "---"
    ]
   },
