--- a/1. Dataset Cleaning.ipynb
+++ b/1. Dataset Cleaning.ipynb
@@ -5,6 +5,13 @@
    "metadata": {},
    "source": [
     "# Dataset cleaning\n",
+    "---\n",
+    "EE0005 Mini-project EE10\n",
+    "\n",
+    "Group **Veriton**\n",
+    "\n",
+    "Members: Hoi To, Joel Lee, Monicka, Yashwanth\n",
+    "\n",
     "---"
    ]
   },
