--- a/1. Dataset Cleaning.ipynb
+++ b/1. Dataset Cleaning.ipynb
@@ -12,7 +12,32 @@
     "\n",
     "Members: Hoi To, Joel Lee, Monicka, Yashwanth\n",
     "\n",
-    "---"
+    "---\n",
+    "\n",
+    "Before we start could start our exploratory analysis on our data, we had to process and clean our raw data into a form that can be efficiently utilised. \n",
+    "\n",
+    "\n",
+    "### Boolean variables\n",
+    "\n",
+    "On first look, some variables with boolean values were stored as integer variables. These variables were type casted into the boolean datatype.\n",
+    "\n",
+    "### Missing values\n",
+    "\n",
+    "There were also variables such as \"salary_range\" that had many missing values. However, we considered the possibility of the variable being relevant to our analysis despite the missing values. Thus, we divided the variable into two variables to represent the lower limit and upper limit of the salary range. For missing values, they were stored as (0,0)\n",
+    "\n",
+    "### One-Hot encoding\n",
+    "\n",
+    "Machine learning algorithms cannot work with categorical data directly. One-hot encoding is a method of converting categorical data into a form that can be fed into machine learning algorithms to get a better prediction. With one-hot, each categorical value is converted into a categorical column with binary values, with 1 indicating the presence of that category.\n",
+    "\n",
+    "### Natural language processing\n",
+    "\n",
+    "Unstructured data such as the job descriptions carry huge amounts of information that can be analysed to derive valuable insight.\n",
+    "\n",
+    "However, the text has to be broken down in a way that can be understood by our machines. Thus, Natural Language Processing techniques such as tokenization and lemmatization was used to process the text data.\n",
+    "\n",
+    "Tokenization is used to separate text into smaller units known as tokens, consisting of words, characters or subwords.\n",
+    "\n",
+    "Lemmatization is the grouping of variant forms of the same root word together, returning the base/dictionary form of a word."
    ]
   },
   {
@@ -43,6 +68,15 @@
    "outputs": [],
    "source": [
     "jobData = pd.read_csv('Datasets/fake_job_postings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobData.dtypes"
    ]
   },
   {
@@ -516,7 +550,8 @@
    "hash": "6d46af94c2bbce495f1e668725902fa517c90b1782bcfe2fce0dd9868df553d3"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
